xidlc/tests/invalid/http_security_api_key_invalid_location.idl
#progma xidlc package xidlc
#progma xidlc version v1.0.0

interface InvalidApiKeyLocationSecurityService {
    @api-key(in = "body", name = "auth")
    @get(path = "/reports")
    string list_reports();
};
